...
                            .padding(.top, 10)
                        }
                        Spacer()
                    }
                }
                
                Section("İsim") {
                    TextField("İsim", text: $name)
                }
            }
            .navigationTitle("Profili Düzenle")
            .navigationBarTitleDisplayMode(.inline)
            .toolbar {
...
